<resources>
    <string name="app_name">PhotoSharing</string>
    <string name="no_photo">No Photo</string>
    <string name="add_picture">Add Picture For your Circle</string>
    <string name="add_photo">Add Photo</string>
    <string name="catelist">What is your \nActivity For Today ?</string>
    <string name="s">Continue</string>
    <string name="Juicy">Juicy</string>
    <string name="choseusername">We Need to Setup \nyour Username Frist</string>
    <string name="username">Add Your Username</string>
    <string name="phototime">Photo Time</string>
    <string name="descrip_phtotime">You Could add it from \nyou gallery</string>
</resources>
