<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ic_chat"
        android:layout_width="152dp"
        android:layout_height="192dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icphotos" />

    <TextView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/no_photo"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_chat" />

    <TextView
        android:id="@+id/Add_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mlight"
        android:text="@string/add_picture"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo" />

    <TextView
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/add_photo"
        android:textColor="#706AC9"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_picture" />

    <Button
        android:id="@+id/pagephoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/iccaman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo" />

    <Button
        android:id="@+id/pagechat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/icmsgun"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo" />

    <Button
        android:id="@+id/dotmenu"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="95dp"
        android:background="@drawable/dotmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagephoto" />

</androidx.constraintlayout.widget.ConstraintLayout>